--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="./">
+  <!-- <base href="/"> -->
+<base href="./">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -36,6 +37,7 @@
       background-color: #F2EEE7; 
     }
   </style>
+  
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
