--- a/index.html
+++ b/index.html
@@ -37,9 +37,14 @@
       background-color: #F2EEE7; 
     }
   </style>
+
+  
+
   
 </head>
 <body>
+
+ <script src="https://checkout.flutterwave.com/v3.js"></script>
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
